# bitcoin-p2p-handshake

./: Cargo.toml  README.md
src/: constants.rs  crypto.rs  lib.rs
src/messages/: codec.rs  mod.rs
src/messages/types/: mod.rs  verack.rs  version.rs
